fix: 期限なしイベントが終了後も申し込める不具合を修正 #200
